create two inital components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -329,6 +329,8 @@
 
 <div class="content" role="main">
 
+  <app-header-component></app-header-component>
+  
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
