create record service, used di and ngfor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -330,6 +330,7 @@
 <div class="content" role="main">
 
   <app-header-component></app-header-component>
+  <app-record-info></app-record-info>
   
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
